# internal/models/models.go
@@ -1,0 +1,18 @@
+package models
+
+// RequestData represents the JSON structure of the client's request
+type RequestData struct {
+	Method  string            `json:"method"`
+	URL     string            `json:"url"`
+	Headers map[string]string `json:"headers"`
+	Body    string            `json:"body,omitempty"`
+}
+
+// ResponseData represents the JSON structure of the server's response
+type ResponseData struct {
+	ID      string            `json:"id"`
+	Status  int               `json:"status"`
+	Headers map[string]string `json:"headers"`
+	Length  int               `json:"length"`
+	Body    string            `json:"body"`
+}
